Add customer controller and stuff