@@ -112,6 +112,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.11.0</version>
                 <configuration>
+                    <source>21</source>
+                    <target>21</target>
                     <annotationProcessorPaths>
                         <path>
                             <groupId>org.mapstruct</groupId>
@@ -134,6 +136,9 @@
                     <compilerArgs>
                         <arg>
                             -Amapstruct.defaultComponentModel=spring
+                        </arg>
+                        <arg>
+                            --enable-preview
                         </arg>
                     </compilerArgs>
                 </configuration>
